[gd_scene load_steps=19 format=3 uid="uid://bsroladvw0jtb"]

[ext_resource type="Script" path="res://rooms/room0.gd" id="1_3850o"]
[ext_resource type="TileSet" uid="uid://vusutmqak5xg" path="res://rooms/dungeon_tileset.tres" id="1_cd0ik"]
[ext_resource type="TileSet" uid="uid://bi56mq2i4t73y" path="res://rooms/dungeon_path.tres" id="2_p4gb7"]
[ext_resource type="PackedScene" uid="uid://c8reqbfdrj4vu" path="res://objects/cherry.tscn" id="4_dkw6r"]
[ext_resource type="PackedScene" uid="uid://4ftym1c5le2g" path="res://objects/button_torch.tscn" id="4_ruwb1"]
[ext_resource type="PackedScene" uid="uid://c2hguu1bp1b0y" path="res://objects/spike.tscn" id="5_aeo56"]
[ext_resource type="PackedScene" uid="uid://drsm3d7wcdipv" path="res://objects/pressure.tscn" id="6_hmcp2"]
[ext_resource type="PackedScene" uid="uid://bc41dh6rchx4h" path="res://objects/spike_flame.tscn" id="7_g05f7"]
[ext_resource type="PackedScene" uid="uid://bvx7aivjbpehq" path="res://objects/spike_frostfire.tscn" id="8_768vu"]
[ext_resource type="PackedScene" uid="uid://krty8ka2tm0k" path="res://objects/pressure_hard.tscn" id="9_ncc5s"]
[ext_resource type="PackedScene" uid="uid://br07j38r86m86" path="res://objects/pawpad.tscn" id="10_okha0"]
[ext_resource type="PackedScene" uid="uid://ddcretk1ehd4p" path="res://objects/ledge.tscn" id="11_mpv7q"]
[ext_resource type="PackedScene" uid="uid://rm5850pxwruu" path="res://objects/help.tscn" id="13_acysd"]
[ext_resource type="AudioStream" uid="uid://bd2sbmvr60emn" path="res://assets/audio/spike_on.wav" id="14_7ytrc"]
[ext_resource type="AudioStream" uid="uid://67hdb7qiceqm" path="res://assets/audio/spike_off.wav" id="15_vq4kr"]
[ext_resource type="AudioStream" uid="uid://cpaljekg35nfp" path="res://assets/audio/fire_on.wav" id="16_5h3th"]
[ext_resource type="AudioStream" uid="uid://doiw2drr8o2x1" path="res://assets/audio/fire_off.wav" id="17_5hmdy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73j6q"]
size = Vector2(960, 800)

[node name="Room0" type="Node2D"]
script = ExtResource("1_3850o")
room_name = "Debug Room Please Ignore"

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("1_cd0ik")
format = 2
layer_0/name = "Path"
layer_0/tile_data = PackedInt32Array(0, 262144, 2, 1, 262144, 2, 2, 262144, 2, 3, 262144, 2, 4, 262144, 2, 5, 262144, 2, 6, 262144, 2, 7, 262144, 2, 8, 262144, 2, 9, 262144, 2, 10, 262144, 2, 11, 262144, 2, 65541, 196608, 2, 65542, 196608, 2, 131076, 196608, 2, 131077, 196608, 2, 131078, 196608, 2, 196614, 196608, 2, 196613, 196608, 2, 196612, 196608, 2, 196615, 196608, 2, 262147, 196608, 2, 327683, 196608, 2, 327684, 196608, 2, 262148, 196608, 2, 262149, 196608, 2, 327685, 196608, 2, 262150, 196608, 2, 327686, 196608, 2, 262151, 196608, 2, 327687, 196608, 2, 393220, 196608, 2, 393221, 196608, 2, 393222, 196608, 2, 393223, 196608, 2, 458758, 196608, 2, 458757, 196608, 2, 524293, 196608, 2, 589829, 262144, 2, 589830, 262144, 2, 524294, 196608, 2, 196611, 196608, 2, 393219, 196608, 2, 458756, 196608, 2, 131079, 196608, 2, 458759, 196608, 2, 458760, 196608, 2, 458755, 196608, 2, 393218, 196608, 2, 196610, 196608, 2, 131075, 196608, 2, 65540, 196608, 2, 65543, 196608, 2, 131080, 196608, 2, 131074, 196608, 2, 262146, 196608, 2, 327682, 196608, 2, 131081, 196608, 2, 65544, 196608, 2, 65539, 196608, 2, 458754, 196608, 2, 458753, 196608, 2, 458752, 262144, 2, 393216, 262144, 2, 327680, 262144, 2, 262144, 262144, 2, 196608, 262144, 2, 131072, 262144, 2, 65536, 262144, 2, 65537, 196608, 2, 131073, 196608, 2, 196609, 196608, 2, 262145, 196608, 2, 327681, 196608, 2, 393217, 196608, 2, 524288, 262144, 2, 589824, 262144, 2, 589825, 262144, 2, 589826, 262144, 2, 589827, 262144, 2, 524291, 196608, 2, 524290, 196608, 2, 524289, 196608, 2, 65538, 196608, 2, 65545, 196608, 2, 65546, 196608, 2, 65547, 262144, 2, 131082, 196608, 2, 196618, 196608, 2, 327690, 196608, 2, 393226, 196608, 2, 458762, 196608, 2, 524298, 196608, 2, 589834, 262144, 2, 589835, 262144, 2, 524299, 262144, 2, 458763, 262144, 2, 393227, 262144, 2, 327691, 262144, 2, 262155, 655360, 4, 196619, 262144, 2, 131083, 262144, 2, 589833, 262144, 2, 589832, 262144, 2, 524296, 196608, 2, 524297, 196608, 2, 458761, 196608, 2, 524295, 196608, 2, 589831, 262144, 2, 524292, 196608, 2, 589828, 262144, 2, 262154, 196608, 2, 196616, 196608, 2, 327688, 196608, 2, 393224, 196608, 2, 393225, 196608, 2, 327689, 196608, 2, 262153, 196608, 2, 196617, 196608, 2, 262152, 196608, 2)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array()

[node name="PathMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("2_p4gb7")
format = 2
layer_0/tile_data = PackedInt32Array(196618, 458754, 1, 131080, 196610, 2, 196616, 393218, 1, 262152, 196610, 2, 327688, 196610, 2, 393224, 393218, 1, 196617, 196610, 0, 131082, 196610, 2, 262154, 196610, 2, 327690, 196610, 2, 393226, 458754, 1, 458762, 196610, 2, 458760, 196610, 2, 524297, 196610, 0, 65545, 196610, 0, 65544, 327682, 0, 65546, 393218, 0, 524296, 327682, 2, 524298, 393218, 2, 393225, 196610, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(480, 400)
shape = SubResource("RectangleShape2D_73j6q")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Cherry" parent="." instance=ExtResource("4_dkw6r")]
position = Vector2(810, 90)
scale = Vector2(5, 5)

[node name="Torch#0" parent="." instance=ExtResource("4_ruwb1")]
position = Vector2(120, 120)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#0"])

[node name="Spike#0" parent="." instance=ExtResource("5_aeo56")]
position = Vector2(120, 200)
scale = Vector2(5, 5)
number_button = Array[int]([0])

[node name="Pressure#-1" parent="." instance=ExtResource("6_hmcp2")]
position = Vector2(120, 280)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#-1", "SpikeFlame#-1", "SpikeFrostfire#-1"])

[node name="Spike#-1" parent="." instance=ExtResource("5_aeo56")]
position = Vector2(120, 360)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFlame#-1" parent="." instance=ExtResource("7_g05f7")]
position = Vector2(200, 360)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFlame#-2" parent="." instance=ExtResource("7_g05f7")]
position = Vector2(440, 120)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFlame#-3" parent="." instance=ExtResource("7_g05f7")]
position = Vector2(440, 200)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFlame#-4" parent="." instance=ExtResource("7_g05f7")]
position = Vector2(520, 120)
scale = Vector2(5, 5)
number_button = Array[int]([-1])
is_reverse = true

[node name="SpikeFlame#-5" parent="." instance=ExtResource("7_g05f7")]
position = Vector2(520, 200)
scale = Vector2(5, 5)
number_button = Array[int]([-1])
is_reverse = true

[node name="SpikeFrostfire#-1" parent="." instance=ExtResource("8_768vu")]
position = Vector2(280, 360)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFrostfire#-2" parent="." instance=ExtResource("8_768vu")]
position = Vector2(520, 680)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFrostfire#-3" parent="." instance=ExtResource("8_768vu")]
position = Vector2(520, 600)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFrostfire#-4" parent="." instance=ExtResource("8_768vu")]
position = Vector2(600, 680)
scale = Vector2(5, 5)
number_button = Array[int]([-1])
is_reverse = true

[node name="SpikeFrostfire#-5" parent="." instance=ExtResource("8_768vu")]
position = Vector2(600, 600)
scale = Vector2(5, 5)
number_button = Array[int]([-1])
is_reverse = true

[node name="PressureHard#-1" parent="." instance=ExtResource("9_ncc5s")]
position = Vector2(360, 360)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#-1"])

[node name="Pawpad#420" parent="." instance=ExtResource("10_okha0")]
position = Vector2(360, 520)
scale = Vector2(5, 5)
other_pawpad_name = Array[String](["Pawpad#421", "Pawpad#422"])
is_active = true
target_name = Array[String](["Spike#420"])

[node name="Pawpad#421" parent="." instance=ExtResource("10_okha0")]
position = Vector2(600, 520)
scale = Vector2(5, 5)
other_pawpad_name = Array[String](["Pawpad#420", "Pawpad#422"])
target_name = Array[String](["SpikeFlame#421"])

[node name="Pawpad#422" parent="." instance=ExtResource("10_okha0")]
position = Vector2(840, 520)
scale = Vector2(5, 5)
other_pawpad_name = Array[String](["Pawpad#420", "Pawpad#421"])
target_name = Array[String](["SpikeFrostfire#422"])

[node name="Spike#420" parent="." instance=ExtResource("5_aeo56")]
position = Vector2(120, 680)
scale = Vector2(5, 5)
number_button = Array[int]([420])
is_reverse = true

[node name="SpikeFlame#421" parent="." instance=ExtResource("7_g05f7")]
position = Vector2(200, 680)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="SpikeFrostfire#422" parent="." instance=ExtResource("8_768vu")]
position = Vector2(280, 680)
scale = Vector2(5, 5)
number_button = Array[int]([-1])

[node name="Undestructible" parent="." instance=ExtResource("11_mpv7q")]
position = Vector2(480, 370)
scale = Vector2(5, 5)

[node name="Undestructible2" parent="." instance=ExtResource("11_mpv7q")]
position = Vector2(560, 370)
scale = Vector2(5, 5)

[node name="Help" parent="." instance=ExtResource("13_acysd")]
position = Vector2(840, 440)
scale = Vector2(5, 5)
help_text_top = "You shouldn't be here"
help_text_bottom = "seriously"

[node name="RaiseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_7ytrc")
volume_db = -5.0

[node name="RetractSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_vq4kr")
volume_db = -5.0

[node name="RaiseFlameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_5h3th")
volume_db = -5.0

[node name="RetractFlameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_5hmdy")
volume_db = -5.0

[connection signal="state_changed" from="Spike#420" to="." method="_on_spike_420_state_changed"]
